...
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.529"
        app:srcCompat="@drawable/base"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/editTextLocation"
        android:layout_width="93dp"
        android:layout_height="25dp"
        android:alpha=".6"
        android:background="@android:color/white"
        android:hint="@string/location"
        android:importantForAutofill="no"
...
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView9"
        app:layout_constraintVertical_bias="0.055"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/editTextImageUrl"
        android:layout_width="178dp"
        android:layout_height="25dp"
        android:alpha=".6"
        android:background="@android:color/white"
        android:hint="@string/paste_url"
        android:importantForAutofill="no"
...
        app:layout_constraintHorizontal_bias="0.204"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.117" />

    <TextView
        android:id="@+id/tvDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:alpha="0.6"
        android:background="@android:color/white"
        android:text="@string/select"
        android:textColor="@android:color/black"
...
        app:layout_constraintHorizontal_bias="0.734"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.116" />

    <TextView
        android:id="@+id/tvDate2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:alpha="0.6"
        android:background="@android:color/white"
        android:text="@string/select"
        android:textColor="@android:color/black"
...
        app:layout_constraintHorizontal_bias="0.256"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.393" />

    <Spinner
        android:id="@+id/spinnerBeds"
        android:layout_width="55dp"
        android:layout_height="25dp"
        android:alpha="0.6"
        android:background="@android:color/white"
        app:layout_constraintBottom_toTopOf="@+id/textView13"
        app:layout_constraintEnd_toEndOf="@+id/imageBackground"
...
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/image_url"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/SubmitButtonID"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.163"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextLocation"
        app:layout_constraintVertical_bias="0.48" />

...
        app:layout_constraintHorizontal_bias="0.742"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.537" />

    <Spinner
        android:id="@+id/spinnerSmoke"
        android:layout_width="55dp"
        android:layout_height="25dp"
        android:alpha="0.6"
        android:background="@android:color/white"
        app:layout_constraintBottom_toTopOf="@+id/textView8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.53"
        app:layout_constraintStart_toEndOf="@+id/spinnerPet"
        app:layout_constraintTop_toBottomOf="@+id/textView10"
        app:layout_constraintVertical_bias="0.12" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
...
        app:layout_constraintHorizontal_bias="0.252"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView13"
        app:layout_constraintVertical_bias="0.115" />

    <Spinner
        android:id="@+id/spinnerRentalType"
        android:layout_width="94dp"
        android:layout_height="24dp"
        android:alpha="0.6"
        android:background="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.353"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.038" />

    <Spinner
        android:id="@+id/spinnerGuests"
        android:layout_width="55dp"
        android:layout_height="25dp"
        android:alpha="0.6"
        android:background="@android:color/white"
        app:layout_constraintBottom_toTopOf="@+id/textView6"
        app:layout_constraintEnd_toStartOf="@+id/spinnerRooms"
        app:layout_constraintHorizontal_bias="0.436"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        app:layout_constraintVertical_bias="0.122" />

    <Spinner
        android:id="@+id/spinnerBaths"
        android:layout_width="55dp"
        android:layout_height="25dp"
        android:alpha="0.6"
        android:background="@android:color/white"
        app:layout_constraintBottom_toTopOf="@+id/textView10"
        app:layout_constraintEnd_toEndOf="parent"
...
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextImageUrl"
        app:layout_constraintVertical_bias="0.8" />

    <EditText
        android:id="@+id/textViewPrice"
        android:layout_width="55dp"
        android:layout_height="25dp"
        android:alpha="0.6"
        android:background="#FFFFFF"
        android:ems="10"
        android:hint="@string/price"
...
